[WPT] dom/nodes/Document-createCDATASection-xhtml.xhtml fails due to missing exception in Document.createCDATASection() https://bugs.webkit.org/show_bug.cgi?id=213167

Reviewed by Yusuke Suzuki.

LayoutTests/imported/w3c:

* web-platform-tests/dom/nodes/Document-createCDATASection-xhtml-expected.txt:
Update results to show we are now passing all subtests.

Source/WebCore:

Tested by existing (formerly failing) test: imported/w3c/web-platform-tests/dom/nodes/Document-createCDATASection-xhtml.xhtml

Throw an "InvalidCharacterError" DOMException if the data passed to createCDATASection
contains the string "]]>" as specified by https://dom.spec.whatwg.org/#dom-document-createcdatasection

* dom/Document.cpp:
(WebCore::Document::createCDATASection):

LayoutTests:

* dom/xhtml/level3/core/documentnormalizedocument07-expected.txt:
* dom/xhtml/level3/core/documentnormalizedocument08-expected.txt:
* dom/xhtml/level3/core/handleerror01-expected.txt:
* dom/xhtml/level3/core/splitcdatasections01-expected.txt:
Update expected results with new error now being thrown.


Canonical link: https://commits.webkit.org/225943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263003 268f45cc-cd09-0410-ab3c-d52691b4dbfc